load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazeldnf:def.bzl", "bazeldnf")
load(":deps.bzl", "rpmtree", "tar2files")

# gazelle:prefix github.com/rmohr/bazeldnf
# gazelle:resolve go github.com/bazelbuild/buildtools/build @com_github_bazelbuild_buildtools//build:go_default_library
# gazelle:resolve go github.com/bazelbuild/buildtools/edit @com_github_bazelbuild_buildtools//edit:go_default_library
gazelle(name = "gazelle")

buildifier(
    name = "buildifier",
)

bazeldnf(
    name = "bazeldnf",
)

rpmtree(
    name = "something",
    rpms = [
        "@libvirt-libs-6.1.0-2.fc32.x86_64.rpm//rpm",
        "@libvirt-devel-6.1.0-2.fc32.x86_64.rpm//rpm",
    ],
)

tar2files(
    name = "something_libs",
    files = {
        "/usr/lib64": [
            "libvirt.so.0",
            "libvirt.so.0.6001.0",
        ],
    },
    tar = ":something",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "whatever",
    deps = [":something"],
)

cc_library(
    name = "bar",
    srcs = ["//:something_libs/usr/lib64"],
)
