load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "bazeldnf.go",
        "fetch.go",
        "filter.go",
        "init.go",
        "ldd.go",
        "prune.go",
        "reduce.go",
        "resolve.go",
        "root.go",
        "rpm2tar.go",
        "rpmtree.go",
        "sandbox.go",
        "tar2files.go",
        "verify.go",
        "xattr.go",
    ],
    importpath = "github.com/rmohr/bazeldnf/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/template",
        "//pkg/api",
        "//pkg/api/bazeldnf",
        "//pkg/bazel",
        "//pkg/ldd",
        "//pkg/order",
        "//pkg/reducer",
        "//pkg/repo",
        "//pkg/rpm",
        "//pkg/sat",
        "//pkg/xattr",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_sassoftware_go_rpmutils//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_x_crypto//openpgp:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
