load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazelrc-preset.bzl", "bazelrc_preset")
load(":preset.bzl", "EXTRA_PRESET_FLAGS")

bazelrc_preset(
    name = "preset",
    extra_presets = EXTRA_PRESET_FLAGS,
)

bzl_library(
    name = "integrity",
    srcs = ["integrity.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//visibility:public"],
)
