load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//bazeldnf:__subpackages__"],
    deps = ["//bazeldnf:platforms"],
)

exports_files([
    "update-lock-file.sh",
    "fetch-dnf-repo.sh",
])

bzl_library(
    name = "lock-file-helpers",
    srcs = ["lock-file-helpers.bzl"],
    visibility = ["//bazeldnf:__subpackages__"],
    deps = [
        "//bazeldnf:toolchain",
        "@bazel_skylib//lib:shell",
    ],
)
