"example MODULE.bazel to test bzlmod integration for bazeldnf with a prebuilt toolchain"

module(name = "example-bazeldnf-with-bzlmod-lock-file")

bazel_dep(name = "bazeldnf", dev_dependency = True)
local_path_override(
    module_name = "bazeldnf",
    path = "../..",
)

bazel_dep(name = "rules_pkg", version = "1.0.1")

bazel_dep(name = "gazelle", version = "0.37.0")
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.archive_override(
    path = "github.com/sassoftware/go-rpmutils",
    urls = [
        "https://github.com/rmohr/go-rpmutils/archive/5acf7436c00dee9caf9367340b35d8c52961d240.tar.gz",
    ],
    strip_prefix = "go-rpmutils-5acf7436c00dee9caf9367340b35d8c52961d240",
    sha256 = "41953067dcc570723f21296728aec19b4967567db0f8a1323aed9633ce37eb9a"
)

bazeldnf = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf")
bazeldnf.config(
    name = "bazeldnf-rpms",
    lock_file = "//:rpms.json",
    repofile = "//:repo.yaml",
    excludes = [
        "bash",
        "ca-certificates",
        "pkgconf-pkg-config",
        "xz-libs",
        "zlib-ng-compat",
    ],
    rpms = [
        "libvirt-devel",
    ],
    nobest = True,
)
bazeldnf.config(
    name = "bazeldnf-others",
    lock_file = "//:rpms-with-no-name-attribute.json",
)
use_repo(
    bazeldnf,
    "bazeldnf-others",
    "bazeldnf-rpms",
)
