"example MODULE.bazel to test bzlmod integration for bazeldnf with a prebuilt toolchain"

module(name = "example-bazeldnf-with-bzlmod-lock-file")

bazel_dep(name = "bazeldnf", dev_dependency = True)
local_path_override(
    module_name = "bazeldnf",
    path = "../..",
)

bazel_dep(name = "rules_pkg", version = "1.0.1")

bazeldnf = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf")
bazeldnf.config(
    name = "bazeldnf-rpms",
    excludes = [
        "bash",
        "ca-certificates",
        "pkgconf-pkg-config",
        "xz-libs",
        "zlib-ng-compat",
    ],
    lock_file = "//:rpms.json",
    nobest = True,
    repofile = "//:repo.yaml",
    rpms = [
        "libvirt-devel",
    ],
)
bazeldnf.config(
    name = "bazeldnf-others",
    lock_file = "//:rpms-with-no-name-attribute.json",
)
use_repo(
    bazeldnf,
    "bazeldnf-others",
    "bazeldnf-rpms",
)
