module(name = "example-bazeldnf-bzlmod-multiarch")

bazel_dep(name = "bazeldnf", dev_dependency = True)
local_path_override(
    module_name = "bazeldnf",
    path = "../..",
)

bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "rules_go")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

bazel_dep(name = "gazelle", version = "0.47.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@bazeldnf//:go.mod")
use_repo(
    go_deps,
    "com_github_adrg_xdg",
    "com_github_bazelbuild_buildtools",
    "com_github_crillab_gophersat",
    "com_github_hashicorp_go_retryablehttp",
    "com_github_jdx_go_netrc",
    "com_github_klauspost_compress",
    "com_github_onsi_gomega",
    "com_github_sassoftware_go_rpmutils",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_ulikunitz_xz",
    "io_k8s_sigs_yaml",
    "org_golang_x_crypto",
    "org_golang_x_exp",
)

bazeldnf_toolchain = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf_toolchain")
bazeldnf_toolchain.register(disable = True)

bazeldnf = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf")
bazeldnf.config(
    name = "bazeldnf_rpms",
    architectures = [
        "x86_64",
        "i686",
    ],
    excludes = [
        # Remove some circular dependencies inducing packages:
        "^fedora-.*",
        "glibc-all-langpacks",
        "glibc-common",
    ],
    lock_file = "//:bazeldnf-lock.json",
    repofile = "//:repo.yaml",
    rpms = [
        "bash",
        "libcint",  # Example package only in i686
    ],
)
use_repo(
    bazeldnf,
    "bazeldnf_rpms",
)

bazel_dep(name = "toolchains_protoc", version = "0.6.0", dev_dependency = True)

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc", dev_dependency = True)
use_repo(protoc, "toolchains_protoc_hub")

register_toolchains(
    "@toolchains_protoc_hub//:all",
    dev_dependency = True,
)
