load("@bazeldnf//bazeldnf:defs.bzl", "bazeldnf", "rpmtree", "tar2files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

bazeldnf(
    name = "bazeldnf",
)

rpmtree(
    name = "something",
    rpms = [
        "@bazeldnf_rpms//libvirt-libs-6.1.0-2.fc32.x86_64.rpm",
        "@bazeldnf_rpms//libvirt-devel-6.1.0-2.fc32.x86_64.rpm",
    ],
)

tar2files(
    name = "something_libs",
    files = {
        "/usr/lib64": [
            "libvirt.so.0",
            "libvirt.so.0.6001.0",
        ],
    },
    tar = ":something",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "whatever",
    deps = [":something"],
)

cc_library(
    name = "bar",
    srcs = ["//:something_libs/usr/lib64"],
)
