"example MODULE.bazel to test bzlmod integration for bazeldnf with a prebuilt toolchain"

module(name = "example-bazeldnf-bzlmod-toolchain-from-source")

bazel_dep(name = "bazeldnf", dev_dependency = True)
local_path_override(
    module_name = "bazeldnf",
    path = "../..",
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "toolchains_protoc", version = "0.3.2")

bazeldnf = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf")
bazeldnf.toolchain(disable = True)
bazeldnf.config(
    name = "bazeldnf_rpms",
    lock_file = "//:bazeldnf-lock.json",
)
use_repo(
    bazeldnf,
    "bazeldnf_rpms",
)
