"example MODULE.bazel to test bzlmod integration for bazeldnf with a prebuilt toolchain"

module(name = "example-bazeldnf-bzlmod-toolchain-from-source")

bazel_dep(name = "bazeldnf", dev_dependency = True)
local_path_override(
    module_name = "bazeldnf",
    path = "../..",
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "rules_go")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "toolchains_protoc", version = "0.3.7")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v27.3",
)
use_repo(protoc, "com_google_protobuf", "toolchains_protoc_hub")

register_toolchains(
    "@toolchains_protoc_hub//:all",
    dev_dependency = True,
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@bazeldnf//:go.mod")
use_repo(
    go_deps,
    "com_github_adrg_xdg",
    "com_github_bazelbuild_buildtools",
    "com_github_crillab_gophersat",
    "com_github_hashicorp_go_retryablehttp",
    "com_github_jdx_go_netrc",
    "com_github_klauspost_compress",
    "com_github_onsi_gomega",
    "com_github_sassoftware_go_rpmutils",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_ulikunitz_xz",
    "io_k8s_sigs_yaml",
    "org_golang_x_crypto",
    "org_golang_x_exp",
)

bazeldnf_toolchain = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf_toolchain")
bazeldnf_toolchain.register(disable = True)

bazeldnf = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf")
bazeldnf.rpm(
    name = "libvirt-libs-11.0.0-1.fc42.x86_64.rpm",
    sha256 = "aac272a2ace134b5ef60a41e6624deb24331e79c76699ef6cef0dca22d94ac7e",
    urls = [
        "https://kojipkgs.fedoraproject.org//packages/libvirt/11.0.0/1.fc42/x86_64/libvirt-libs-11.0.0-1.fc42.x86_64.rpm",
    ],
)
bazeldnf.rpm(
    name = "libvirt-devel-11.0.0-1.fc42.x86_64.rpm",
    sha256 = "dba37bbe57903afe49b5666f1781eb50001baa81af4584b355db0b6a2afad9fa",
    urls = [
        "https://kojipkgs.fedoraproject.org//packages/libvirt/11.0.0/1.fc42/x86_64/libvirt-devel-11.0.0-1.fc42.x86_64.rpm",
    ],
)
use_repo(
    bazeldnf,
    "libvirt-devel-11.0.0-1.fc42.x86_64.rpm",
    "libvirt-libs-11.0.0-1.fc42.x86_64.rpm",
)

bazel_dep(name = "rules_cc", version = "0.1.1", dev_dependency = True)
